--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="container">
       <h1>Hello World</h1>
     </div>
-    <script>
-      src = "src/app.js";
+    <script src = "src/app.js"> </script>
     </script>
   </body>
 </html>
