--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
+      <h1>Seattle, WA, USA</h1>
+      <ul>
+          <li>Sunday 11:00</li>
+          <li>Sunny</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny"> 62°F | °C
+        </div>
+        <div class="col-6">
+            <ul>
+                <li>
+                    Precipitation: 0%
+                </li>
+                <li>
+                    Humidity: 55%
+                </li>
+                <li>
+                    Wind: 6 mph
+                </li>
+            </ul>
+        </div>
+      </div>
+        <small>
+            <a href="https://github.com/ferranbecker/weather-app" target="_blank">Open-source code</a> by Ferran Becker
+        </small>
     </div>
     <script src = "src/app.js"> </script>
     </script>
