--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="container">
+        <div class="weather-app">
       <h1>Seattle, WA, USA</h1>
       <ul>
           <li>Sunday 11:00</li>
@@ -36,6 +37,7 @@
                 </li>
             </ul>
         </div>
+      </div>
       </div>
         <small>
             <a href="https://github.com/ferranbecker/weather-app" target="_blank">Open-source code</a> by Ferran Becker
