--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="container">
+        <div class="weather-app-wrapper">
         <div class="weather-app">
       <h1>Seattle, WA, USA</h1>
       <ul>
@@ -38,11 +39,12 @@
             </ul>
         </div>
       </div>
-      <small>
+      
+      </div>
+        <small>
             <a href="https://github.com/ferranbecker/weather-app" target="_blank">Open-source code</a> by Ferran Becker
         </small>
-      </div>
-        
+    </div>
     </div>
     <script src = "src/app.js"> </script>
     </script>
