--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
     <div class="container">
         <div class="weather-app-wrapper">
         <div class="weather-app">
+            <div class="overview">
       <h1>Seattle, WA, USA</h1>
       <ul>
           <li>Sunday 11:00</li>
           <li>Sunny</li>
+          </div>
       </ul>
       <div class="row">
         <div class="col-6">
-            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny"> 62°F | °C
+            <div class="d-flex weather-temperature">
+            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
+            alt="sunny" class="float-left"/> 
+            <div class="d-flex align-items-start"><strong>62</strong> <span class="units"> °F |<a href="#">°C</a> </span>
+            </div>
+    </div>
         </div>
         <div class="col-6">
             <ul>
