--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -17,10 +19,10 @@
         <div class="weather-app-wrapper">
         <div class="weather-app">
             <div class="overview">
-      <h1>Seattle, WA, USA</h1>
+      <h1 id="city">Seattle, WA, USA</h1>
       <ul>
           <li>Sunday 11:00</li>
-          <li>Sunny</li>
+          <li id="description">Sunny</li>
           </div>
       </ul>
       <div class="row">
@@ -28,20 +30,17 @@
             <div class="d-flex weather-temperature">
             <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
             alt="sunny" class="float-left"/> 
-            <div class="d-flex align-items-start"><strong>62</strong> <span class="units"> °F |<a href="#">°C</a> </span>
+            <div class="d-flex align-items-start"><strong id="temperature">62</strong> <span class="units"> °F |<a href="#">°C</a> </span>
             </div>
     </div>
         </div>
         <div class="col-6">
             <ul>
                 <li>
-                    Precipitation: 0%
+                    Humidity: <span id="humidity"></span>%
                 </li>
                 <li>
-                    Humidity: 55%
-                </li>
-                <li>
-                    Wind: 6 mph
+                    Wind: <span id="wind"></span> mph
                 </li>
             </ul>
         </div>
