updated date time data

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="overview">
       <h1 id="city">Seattle, WA, USA</h1>
       <ul>
-          <li>Sunday 11:00</li>
+          <li>Last updated: <span id="date"></span></li>
           <li id="description">Sunny</li>
           </div>
       </ul>
