updated icon and alt

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <div class="row">
         <div class="col-6">
             <div class="d-flex weather-temperature">
-            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
-            alt="sunny" class="float-left"/> 
+            <img src="" 
+            alt="sunny" class="float-left"
+            id="icon"/> 
             <div class="d-flex align-items-start"><strong id="temperature">62</strong> <span class="units"> °F |<a href="#">°C</a> </span>
             </div>
     </div>
