updated temp conversions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="" 
             alt="sunny" class="float-left"
             id="icon"/> 
-            <div class="d-flex align-items-start"><strong id="temperature">62</strong> <span class="units"> °F |<a href="#">°C</a> </span>
+            <div class="d-flex align-items-start"><strong id="temperature">62</strong> <span class="units"> <a href="#" id="fahrenheit-link">°F</a> |<a href="#" id="celsius-link">°C</a> </span>
             </div>
     </div>
         </div>
