--- a/index.html
+++ b/index.html
@@ -55,7 +55,20 @@
             </ul>
         </div>
       </div>
-      
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">
+            Mon
+            </div>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" 
+            width="42">
+            <div class="weather-forecast-temperature">
+              <span class="weather-forecast-temperature-max">56°</span> <span class="weather-forecast-temperature-min">43°</span></div>
+          
+          </div>
+        </div>
+      </div>
       </div>
         <small>
             <a href="https://github.com/ferranbecker/weather-app" target="_blank">Open-source code</a> by Ferran Becker
